--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch scr/index.js"
+    "start": "nodemon scr/index.js"
   },
   "repository": {
     "type": "git",
