--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Karen11Vargas/websocket_nodejs#readme",
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mysql": "^2.18.1",
